objects/ssot__ActionPlanTemplate__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActionPlanType__c</fullName>
        <label>Action Plan Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DescriptionText__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Action Plan Template Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAdHocItemCreationEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Ad Hoc Item Creation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShouldShowOnLearnerPortal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Should Show On Learner Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TargetEntityTypeId__c</fullName>
        <label>Target Entity Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TargetEntityTypeObject__c</fullName>
        <label>Target Entity Type Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UniqueNameText__c</fullName>
        <label>UniqueName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817649968_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActionPlanTemplate_TargetEntityTypeI_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>ActionPlanTemplate_TargetEntityTypeI_rel</relationshipLabel>
        <relationshipName>rel_1719817649968_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818622991_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActionPlanTemplate_TargetEntityTypeI_rel</label>
        <referenceTo>ssot__ApplicationDecision__dlm</referenceTo>
        <relationshipLabel>ActionPlanTemplate_TargetEntityTypeI_rel</relationshipLabel>
        <relationshipName>rel_1719818622991_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819475979_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActionPlanTemplate_TargetEntityTypeI_rel</label>
        <referenceTo>ssot__Campaign__dlm</referenceTo>
        <relationshipLabel>ActionPlanTemplate_TargetEntityTypeI_rel</relationshipLabel>
        <relationshipName>rel_1719819475979_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>